--- a/milgen.ipynb
+++ b/milgen.ipynb
@@ -39,7 +39,9 @@
         "# -*- coding: utf-8 -*-\n",
         "\"\"\"\n",
         "Created on Tue Dec 17 01:47:34 2019\n",
-        "How to do MIL when the bag just won't fit into memory\n",
+        "How to do MIL when the bag just won't fit into memory: Use hill climbing search\n",
+        "This should require significantly less number of bags in comparison to the Fuchs paper\n",
+        "(https://arxiv.org/abs/1805.06983)\n",
         "Idea:\n",
         "In each iteration\n",
         "  Load random patches (examples) from a bag\n",
@@ -99,6 +101,7 @@
         "positer, negiter = iter(posgen), iter(neggen)\n",
         "# Loop over epochs\n",
         "for i in range(max_iters):\n",
+        "  # Selecting a positive and a negative bag randomly\n",
         "    try: #not pretty but works!\n",
         "      PX,Pid,_ = next(positer)\n",
         "    except StopIteration:\n",
@@ -112,9 +115,9 @@
         "      NX,Ni,_ = next(negiter)\n",
         "    NX,Nid = NX[0].to(device),Nid[0]\n",
         "    print(i,Pid,Nid)\n",
-        "    # compute score over PX and NX. Save top scoring patch of each to a file\n",
+        "  # TODO: compute score over PX and NX. Save top scoring patch of each to a file\n",
         "    # so it can be loaded\n",
-        "    # Comput loss "
+        "  # TODO: Comput loss and backpropagate"
       ],
       "execution_count": 31,
       "outputs": [
@@ -137,78 +140,50 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
-        "id": "K9brS199gWRB",
-        "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 199
-        },
-        "outputId": "f060cb63-c15b-4fb1-d03d-94a425c5df02"
+        "id": "M3l-zd7_8tVz",
+        "colab_type": "text"
       },
       "source": [
-        "PX"
-      ],
-      "execution_count": 29,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "tensor([[0.4601, 0.4991],\n",
-              "        [0.1672, 0.3796],\n",
-              "        [0.9596, 0.7124],\n",
-              "        [0.7853, 0.6906],\n",
-              "        [0.8232, 0.8574],\n",
-              "        [0.1193, 0.2484],\n",
-              "        [0.2003, 0.5079],\n",
-              "        [0.6945, 0.4801],\n",
-              "        [0.6093, 0.5968],\n",
-              "        [0.3975, 0.3490]], dtype=torch.float64)"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 29
-        }
+        "This approach is losely based on the following algorithm for random search for the max element in an array (Hill Climbing)"
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "mzGQfaaql4Hb",
+        "id": "NVRh3RdY7OHA",
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
         },
-        "outputId": "591d5f3b-c342-4f22-925e-db4a59d765bf"
+        "outputId": "59624c36-db8f-4482-de2b-0ea4258f356d"
       },
       "source": [
-        "local_labels"
+        "Z = np.random.rand(100)\n",
+        "M = -np.inf\n",
+        "for _ in range(10):\n",
+        "  m = np.max(np.random.choice(Z,5))\n",
+        "  if m>M:\n",
+        "    M = m\n",
+        "print(\"Max Found through Random Search:\",M,\"Actual Max:\",np.max(Z))"
       ],
-      "execution_count": 31,
+      "execution_count": 62,
       "outputs": [
         {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "tensor([0])"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 31
+          "output_type": "stream",
+          "text": [
+            "Max Found through Random Search: 0.927732556797191 Actual Max: 0.9986497246288282\n"
+          ],
+          "name": "stdout"
         }
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "ZaO237PrmCj9",
+        "id": "znEoWIVw7SLj",
         "colab_type": "code",
         "colab": {}
       },
