--- a/milgen.ipynb
+++ b/milgen.ipynb
@@ -42,15 +42,17 @@
         "How to do MIL when the bag just won't fit into memory: Use hill climbing search\n",
         "This should require significantly less number of bags in comparison to the Fuchs paper\n",
         "(https://arxiv.org/abs/1805.06983)\n",
-        "Idea:\n",
+        "Idea: (inspired from ESMIL)\n",
         "In each iteration\n",
-        "  Load random patches (examples) from a bag\n",
+        "  Chose a positive and a negative bag (WSI)\n",
+        "  Load random examples (patches) from a bag (WSI)\n",
         "  Append to it, the last max scoring example of the bag\n",
+        "  Evaluate all examples in the bag using the given model\n",
         "  Save max scoring example of the bag to file\n",
-        "  Do the above for a randomly chosen positive and a random negative bag\n",
-        "  Compute loss\n",
+        "  Compute loss based on the positive and negative bag\n",
         "  Backpropagate\n",
-        "Based on: https://stanford.edu/~shervine/blog/pytorch-how-to-generate-data-parallel\n",
+        "Assumptions: Each bag (WSI) has an ID and there is an efficient way to load random examples (patches) for a bag (WSI)\n",
+        "Losely Based on: https://stanford.edu/~shervine/blog/pytorch-how-to-generate-data-parallel\n",
         "@author: Fayyaz Minhas\n",
         "\"\"\"\n",
         "import numpy as np\n",
@@ -73,7 +75,7 @@
         "        # Select sample\n",
         "        ID = self.list_IDs[index]\n",
         "        if self.maxsize is None:\n",
-        "          maxsize = 10\n",
+        "          maxsize = 10 #load all?\n",
         "        else:\n",
         "          maxsize = self.maxsize\n",
         "        #Load random examples (patches) from bag file (WSI) based on ID   \n",
