--- a/milgen.ipynb
+++ b/milgen.ipynb
@@ -33,7 +33,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 199
         },
-        "outputId": "11f85248-aafa-47eb-b965-ce24f4252265"
+        "outputId": "f23d609e-5500-4c43-8cc9-127d476550fc"
       },
       "source": [
         "# -*- coding: utf-8 -*-\n",
@@ -114,28 +114,28 @@
         "      NX,Nid,_ = next(negiter)\n",
         "    except StopIteration:\n",
         "      negiter = iter(neggen)\n",
-        "      NX,Ni,_ = next(negiter)\n",
+        "      NX,Nid,_ = next(negiter)\n",
         "    NX,Nid = NX[0].to(device),Nid[0]\n",
         "    print(i,Pid,Nid)\n",
         "  # TODO: compute score over PX and NX. Save top scoring patch of each to a file\n",
         "    # so it can be loaded\n",
         "  # TODO: Comput loss and backpropagate"
       ],
-      "execution_count": 31,
+      "execution_count": 65,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "0 id-1 id-5\n",
-            "1 id-3 id-4\n",
-            "2 id-2 i\n",
-            "3 id-3 id-5\n",
-            "4 id-2 i\n",
-            "5 id-1 id-5\n",
-            "6 id-2 i\n",
-            "7 id-1 id-5\n",
-            "8 id-3 i\n",
-            "9 id-3 id-4\n"
+            "0 id-1 id-4\n",
+            "1 id-3 id-5\n",
+            "2 id-2 id-4\n",
+            "3 id-1 id-5\n",
+            "4 id-3 id-4\n",
+            "5 id-2 id-5\n",
+            "6 id-3 id-5\n",
+            "7 id-1 id-4\n",
+            "8 id-2 id-5\n",
+            "9 id-1 id-4\n"
           ],
           "name": "stdout"
         }
