--- a/milgen.ipynb
+++ b/milgen.ipynb
@@ -98,7 +98,7 @@
         "partition = {'pos': ['id-1', 'id-2', 'id-3'], 'neg': ['id-4','id-5']}# IDs (bag ids or WSI names)\n",
         "labels = dict([(k,1.0) for k in partition['pos']]+[(k,-1.0) for k in partition['neg']]) \n",
         "# Generators (for positive and negative bags)\n",
-        "posgen = data.DataLoader(MILDataset(partition['pos'], labels), pin_memory = True, shuffle = True)\n",
+        "posgen = data.DataLoader(MILDataset(partition['pos'], labels), pin_memory = True, shuffle = True) #disable pin_memory if the data cannot fit into GPU memory\n",
         "neggen = data.DataLoader(MILDataset(partition['neg'], labels), pin_memory = True, shuffle = True)\n",
         "positer, negiter = iter(posgen), iter(neggen)\n",
         "# Loop over epochs\n",
@@ -109,13 +109,15 @@
         "    except StopIteration:\n",
         "      positer = iter(posgen)\n",
         "      PX,Pid,_ = next(positer)\n",
-        "    PX,Pid = PX[0].to(device),Pid[0]\n",
+        "    PX,Pid = PX[0],Pid[0]\n",
+        "    # pass each example one by one .to(device) and score the max (try with all at once as well)\n",
         "    try:\n",
         "      NX,Nid,_ = next(negiter)\n",
         "    except StopIteration:\n",
         "      negiter = iter(neggen)\n",
         "      NX,Nid,_ = next(negiter)\n",
-        "    NX,Nid = NX[0].to(device),Nid[0]\n",
+        "    NX,Nid = NX[0],Nid[0]\n",
+        "    # pass each example one by one .to(device) and score the max (try with all at once as well)\n",
         "    print(i,Pid,Nid)\n",
         "  # TODO: compute score over PX and NX. Save top scoring patch of each to a file\n",
         "    # so it can be loaded\n",
@@ -160,7 +162,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 35
         },
-        "outputId": "59624c36-db8f-4482-de2b-0ea4258f356d"
+        "outputId": "868849d7-7f61-41d1-901b-de98a3e56249"
       },
       "source": [
         "Z = np.random.rand(100)\n",
@@ -171,12 +173,12 @@
         "    M = m\n",
         "print(\"Max Found through Random Search:\",M,\"Actual Max:\",np.max(Z))"
       ],
-      "execution_count": 62,
+      "execution_count": 66,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Max Found through Random Search: 0.927732556797191 Actual Max: 0.9986497246288282\n"
+            "Max Found through Random Search: 0.9954376540271678 Actual Max: 0.9954376540271678\n"
           ],
           "name": "stdout"
         }
